boulder/boulder/tests/compile_fail/function/ret_ty/empty_body.bo
# Mismatched types
# expected `Empty`
# found `u32`
# (5:
fn test() -> u32 { }